# PowerGridSimulator

./: CMakeLists.txt  build_instructions.md
include/: Busbar.h  Grid.h  Load.h  PowerSource.h  Simulator.h
src/: Busbar.cpp  Grid.cpp  Load.cpp  PowerSource.cpp  Simulator.cpp  main.cpp
